# singleton-bayes

./: LICENSE  README.md  cabal.project  singleton-bayes.cabal
app/: Main.hs
src/DependentBayes/: Clinical.hs  Core.hs  Example.hs  Inference.hs  Singleton.hs  Types.hs
src/DependentBayes/Clinical/: Types.hs
src/DependentBayes/Singleton/: Clinical.hs  Mode.hs
test/: Spec.hs
